29349 fix play btn on mobile

--- a/wp-content/themes/w4ptheme/scss/_global.scss
+++ b/wp-content/themes/w4ptheme/scss/_global.scss
@@ -173,19 +173,25 @@ ol {
 }
 .playBtn {
     display: inline-block;
-    padding: 5px;
-    border: 1px solid $white;
-    border-radius: 48px;
     font-size: $fontSize-small;
-    background: $white--80op;
-    color: $black--light;
-    box-shadow: 0 5px 20px 0 $black--20op;
+    color: $black--light30op;
     transition: all .3s;
+    @include breakpoint(medium) {
+        padding: 5px;
+        border-radius: 48px;
+        border: 1px solid $white;
+        background: $white--80op;
+        color: $black--light;
+        box-shadow: 0 5px 20px 0 $black--20op;
+    }
     &:hover {
-        background: $blue;
-        border-color: $blue;
-        color: $white;
+        color: $blue;
         text-decoration: none;
+        @include breakpoint(medium) {
+            background: $blue;
+            border-color: $blue;
+            color: $white;
+        }
         .playBtn-icon {
             background: $white;
             &::before {
@@ -193,10 +199,17 @@ ol {
             }
         }
     }
+    .playBtn-svg {
+        width: 50px;
+        height: 50px;
+    }
     span {
-        display: inline-block;
+        display: none;
         vertical-align: middle;
         margin-right: 5px;
+        @include breakpoint(medium) {
+            display: inline-block;
+        }
         &:last-child {
             margin-right: 0;
         }
